--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.1"
 services:
-   amsterdam-subsidies:
+   ro-pp-subsidies:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ../:/opt/as
+      - ../:/opt/ro
     networks:
-      - as
+      - ro
     restart: always
 networks:
-  as:
+  ro:
