--- a/update.sh.example
+++ b/update.sh.example
@@ -3,7 +3,7 @@ cd /opt/ro
 rm -f message.txt
 touch message.txt
 
-GITHUB_PERSONAL_TOKEN=xxx
+GITHUB_PERSONAL_TOKEN=<YOUR_TOKEN>
 git pull https://${GITHUB_PERSONAL_TOKEN}@github.com/openstate/ro-pp-subsidies.git master
 
 ODS_LINK=`./get-link.py`
@@ -14,12 +14,19 @@ libreoffice --convert-to csv tmp-subsidies.ods
 #csvcut -c 1-12 tmp-subsidies2.csv >tmp-subsidies3.csv
 sed '1s/^\xEF\xBB\xBF//;${/^$/d;}' tmp-subsidies.csv >"subsidies.csv"
 #csv-diff subsidies-old.csv subsidies.csv --key=DOSSIERNUMMER >>message.txt
+
+SUBS_DIFF=$(diff subsidies.csv subsidies-old.csv)
+if [ "$SUBS_DIFF" != "" ]
+then
+  echo "Subsidies bijgewerkt." >message.txt
+fi
+
 cp -f subsidies.csv subsidies-old.csv
 
 git add subsidies.csv
 
 git config --global user.email "developers@openstate.eu"
-git config --global user.name "OpenState Devs"
+git config --global user.name "Open State developers"
 git commit -F message.txt && \
               git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/openstate/ro-pp-subsidies.git master \
               || true
